--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/footer_socials.css"/>
     <link rel="stylesheet" href="css/fotorama.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/jquery-1.12.4.js"></script>
     <script src="js/jquery-ui.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -40,7 +39,7 @@
 
     </div>
     </div>
-    </div>
+
 
 
 
@@ -90,7 +89,7 @@
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="service service_mod">
-            <div class="circle circle_mod">
+            <div class="circle">
                 <div class="icon-service-3 service_font_size"></div>
             </div>
             <h3 class="service_h3 service_h3_mod">100% Organized PSD File</h3>
@@ -152,7 +151,7 @@
                         <div class="circle">
                             <div class="icon-service-2 service_font_size"></div>
                         </div>
-                        <h3 class="service_h3">100% Organized PSD File</h3>
+                        <h3 class="service_h3 service_h3_mod">100% Organized PSD File</h3>
                         <p class="service_p service_p_mod">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
@@ -212,7 +211,7 @@
                         <div class="circle">
                             <div class="icon-service-1 service_font_size"></div>
                         </div>
-                        <h3 class="service_h3">100% Organized PSD File</h3>
+                        <h3 class="service_h3 service_h3_mod">100% Organized PSD File</h3>
                         <p class="service_p service_p_mod">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
@@ -271,7 +270,7 @@
                         <div class="circle">
                             <div class="icon-service-4 service_font_size"></div>
                         </div>
-                        <h3 class="service_h3">100% Organized PSD File</h3>
+                        <h3 class="service_h3 service_h3_mod">100% Organized PSD File</h3>
                         <p class="service_p service_p_mod">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
@@ -330,7 +329,7 @@
                         <div class="circle">
                             <div class="icon-service-3 service_font_size"></div>
                         </div>
-                        <h3 class="service_h3">100% Organized PSD File</h3>
+                        <h3 class="service_h3 service_h3_mod">100% Organized PSD File</h3>
                         <p class="service_p service_p_mod">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
